--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 Things that needs to be fixed (or at least should be).
 
 * There is a complete lack of validation on user supplied arguments.
+* The program does not create world peace.
 
- ____________________________________
+ ------------------------------------
 | Please help me! The bugs are itchy |
  ------------------------------------
         \   ^__^
