--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Things that needs to be fixed (or at least should be).
 
 * There is a complete lack of validation on user supplied arguments.
+* The deaggregated thing should print out the biggest subnets first.
 * The program does not create world peace.
 
  ------------------------------------
